<resources>
    <string name="app_name">To-Dororo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo_desc">App Logo</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="create_account"><u>Create Account</u></string>
    <string name="no_account">"Don't have account?"</string>
    <string name="yes_account">"Already have an account?"</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="invalid_charlength">Must contain atleast 8 characters long</string>
    <string name="password_mismatch">Password does not match!</string>
    <string name="tac_box">I agree to the Term Policies and Privacy Agreement</string>
    <string name="login"><u>Login</u></string>
    <string name="edit_profile"><u>Edit</u></string>
    <string name="cancel_edit_profile"><u>Cancel</u></string>
    <string name="change_password"><u>Change Password</u></string>
</resources>